Closed Bug 2005756 Opened 1 month ago Closed 1 month ago

anchor-center should not clear manually-set margin.

Categories

(Core :: Layout: Positioned, defect)

defect

Tracking

()

RESOLVED FIXED
148 Branch
Tracking Status
firefox147 --- fixed
firefox148 --- fixed

People

(Reporter: dshin, Assigned: dshin)

References

(Blocks 1 open bug)

Details

(Whiteboard: [wptsync upstream])

Attachments

(2 files)

Summary: anchor-center should clear margin only when it's auto → anchor-center should not clear manually-set margin.
Attachment #9532748 - Attachment description: Bug 2005756: Do not clear computed margin on anchor-center in that axis. r=#anchor-pos → Bug 2005756: Only clear computed margin on anchor-center of a side specifying auto. r=#anchor-pos
Pushed by dshin@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/ff7d3e2bcaf5 https://hg.mozilla.org/integration/autoland/rev/b00299337c7c Only clear computed margin on anchor-center of a side specifying auto. r=layout-anchor-positioning-reviewers,layout-reviewers,emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/56723 for changes under testing/web-platform/tests
Whiteboard: [anchorpositioning:triage] → [anchorpositioning:triage], [wptsync upstream]
Status: NEW → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 148 Branch
Upstream PR merged by moz-wptsync-bot
Attachment #9533211 - Flags: approval-mozilla-beta?

firefox-beta Uplift Approval Request

  • User impact if declined: Broken Anchor Positioning feature: Anchored element does not get positioned in a way that is visible to the user
  • Code covered by automated testing: yes
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: https://treeherder.mozilla.org/jobs?repo=try&revision=941f01ce894f90d5416612e8b345b0f00a8345e5
  • Risk associated with taking this patch: low
  • Explanation of risk level: Manual uplift, but changes are easily traceable
    Regressions tracked by existing WPTs
  • String changes made/needed: N/A
  • Is Android affected?: yes
Flags: in-testsuite+
Attachment #9533211 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Whiteboard: [anchorpositioning:triage], [wptsync upstream] → [wptsync upstream]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: