Bug 2005756: Only clear computed margin on anchor-center of a side specifying auto.  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D276265

Differential Revision: https://phabricator.services.mozilla.com/D276563